--- a/src/style/login.css
+++ b/src/style/login.css
@@ -66,6 +66,7 @@
 }
 
 .login-component .login-container input {
+  transition: all 0.5s;
   width: 100%;
   height: 62px;
   background-color: #e6e6e6;
@@ -166,4 +167,8 @@
   .login-component {
     padding-right: 15px;
   }
+}
+
+.login-component .login-container input:focus {
+  box-shadow: 2px 2px 10px #d33f8d, -2px -2px 10px #d33f8d;
 }
