--- a/src/style/login.css
+++ b/src/style/login.css
@@ -3,7 +3,7 @@
 }
 .login-component {
   min-height: 100vh;
-  width: 99%;
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -66,7 +66,7 @@
 }
 
 .login-component .login-container input {
-  transition: all 0.5s;
+  transition: all 0.7s ease-out;
   width: 100%;
   height: 62px;
   background-color: #e6e6e6;
