--- a/src/style/login.css
+++ b/src/style/login.css
@@ -10,7 +10,7 @@
   flex-wrap: wrap;
   padding: 15px;
   background-color: #e6e6e6;
-  /* background: -webkit-linear-gradient(bottom, #0250c5, #d4418d); */
+  background: -webkit-linear-gradient(bottom, #0250c5, #d4418d);
   position: relative;
   z-index: 1;
 }
@@ -61,6 +61,7 @@
   width: 100%;
   display: block;
   margin-bottom: 55px;
+  margin-top: -45px;
   text-transform: uppercase;
   font-size: 30px;
 }
@@ -88,9 +89,9 @@
   position: relative;
 }
 
-.login-component .login-container .input-wrap span {
+.login-component .login-container .input-wrap span[class*="fa"] {
   position: absolute;
-  top: 25px;
+  top: 24px;
   left: 20px;
 }
 
