--- a/src/style/mainNavbar.css
+++ b/src/style/mainNavbar.css
@@ -25,7 +25,7 @@
   text-align: left;
   position: relative;
   padding: 1px;
-  background-color: #212529;
+  background-color: #18354c;
 }
 
 .main-navbar .navbar .navbar-links {
@@ -113,7 +113,6 @@
     margin: 0px;
     padding: 10px;
     padding-left: 20px;
-    background-color: #212529;
     border: none;
     border-radius: 0px;
   }
