--- a/src/style/mainNavbar.css
+++ b/src/style/mainNavbar.css
@@ -1,7 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Lobster&display=swap");
+
 .main-navbar {
   min-width: 100%;
   padding: 0px;
   margin: 0px;
+  font-family: "Lobster", cursive;
+  font-size: 19px;
 }
 
 .main-navbar * {
@@ -60,7 +64,7 @@
 .main-navbar .nav-item a {
   color: #ffffff80;
   text-decoration: none;
-  font-size: 16px;
+  font-size: 18px;
 }
 
 .main-navbar .nav-item a:hover {
