--- a/src/style/mainNavbar.css
+++ b/src/style/mainNavbar.css
@@ -6,6 +6,8 @@
   margin: 0px;
   font-family: "Lobster", cursive;
   font-size: 19px;
+  box-shadow: 0 1px 2px 0px rgba(34, 36, 38, 0.15);
+  border-bottom: 1px solid #ddd;
 }
 
 .main-navbar * {
