--- a/src/style/dashboard-forms.css
+++ b/src/style/dashboard-forms.css
@@ -11,7 +11,7 @@
   box-sizing: border-box;
 }
 
-.dashboard-forms .title {
+.dashboard-forms .title1 {
   width: 100%;
   padding-top: 16px;
   margin-bottom: 30px;
