--- a/src/style/dashbaord.css
+++ b/src/style/dashbaord.css
@@ -46,8 +46,9 @@
   cursor: pointer;
   margin-right: 15px;
   margin-top: 25px;
-  height: 410px;
-  background-color: #ffffff;
+  height: 425px;
+  /* background-color: rgba(0, 0, 0, 0.7); */
+  background-color:#1a2228;
   border-radius: 5px;
   padding: 10px;
   box-shadow: 0 1px 3px 0 #d4d4d5, 0 0 0 1px #d4d4d5;
@@ -61,9 +62,9 @@
 }
 
 .dashbaord .content .item > div:first-child > img {
-  width: 100%;
+  width: 99%;
   padding: 0px;
-  border-radius: 3px;
+  border-radius: 4px;
   border-top-right-radius: 6px;
   border-top-left-radius: 6px;
 }
@@ -77,7 +78,8 @@
   left: 0px;
   border-radius: 5px;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1),
-    0px -4px 8px rgba(255, 255, 255, 0.8);
-  background-color: #ffffff;
+    -2px -4px 8px rgba(255, 255, 255, 0.8);
+  background-color: rgba(0, 0, 0, 0.7);
   z-index: 5;
+  color: #ffffff;
 }
