--- a/src/style/course-adder.css
+++ b/src/style/course-adder.css
@@ -36,7 +36,8 @@
 
 .course-adder .course-joiner .select-button {
   width: 85%;
-  background-color: #ffffff;
+  color: #ffffff;
+  background-color:#1a2228;
   position: relative;
   text-align: left;
   display: flex;
@@ -67,7 +68,7 @@
   width: 1px;
   height: 40px;
   color: black;
-  background-color: rgba(0, 0, 0, 0.24);
+  background-color: #ffffff;
   position: absolute;
   left: -20px;
   top: -11px;
