--- a/src/style/login.css
+++ b/src/style/login.css
@@ -199,3 +199,38 @@
   top: 7px;
   left: 20px;
 }
+
+.remember-me {
+  width: 100%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  position: relative;
+}
+
+.login-component .remember-me .rem-input {
+  width: 21px;
+  height: 21px;
+  border-radius: 50%;
+  border: 1px solid #0250c5;
+  -webkit-appearance: none;
+  padding: 0px;
+  margin-left: 2px;
+  cursor: pointer;
+  background-color: transparent;
+}
+
+.login-component .remember-me .rem-input:checked::after {
+  content: '';
+  background-color: #0250c5;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  position: absolute;
+  left: 5.9px;
+  top: 2.5px;
+}
+
+.login-component .remember-me label {
+  padding-left: 10px;
+}
